--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "wipman",
   "description": "",
   "publisher": "dtgoitia",
-  "version": "0.0.2",
+  "version": "0.0.12",
   "engines": {
     "vscode": "^1.60.0"
   },
@@ -17,14 +17,51 @@
     "Other"
   ],
   "activationEvents": [
+    "onCommand:wipman.indexLocalFiles",
+    "onCommand:wipman.createTaskFile",
+    "onCommand:wipman.createViewFile",
+    "onCommand:wipman.openWipmanDirectory",
+    "onCommand:wipman.sync",
+    "onDidSaveTextDocument",
     "onStartupFinished"
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "configuration": {
+      "title": "wipman",
+      "properties": {
+        "wipman.debug": {
+          "type": ["boolean", "null"],
+          "default": null,
+          "description": "Enable logging to file and snapshot creation"
+        },
+        "wipman.relativePath": {
+          "type": ["string", "null"],
+          "default": null,
+          "description": "Path - relative to workspace directory - where the wipman directory is."
+        }
+      }
+    },
     "commands": [
       {
-        "command": "wipman.helloWorld",
-        "title": "Hello World"
+        "command": "wipman.indexLocalFiles",
+        "title": "wipman: index local files"
+      },
+      {
+        "command": "wipman.createTaskFile",
+        "title": "wipman: create task file"
+      },
+      {
+        "command": "wipman.createViewFile",
+        "title": "wipman: create view file"
+      },
+      {
+        "command": "wipman.sync",
+        "title": "wipman: sync changes with remote server"
+      },
+      {
+        "command": "wipman.openWipmanDirectory",
+        "title": "wipman (dev): open wipman directory"
       }
     ]
   },
@@ -35,10 +72,15 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
+    "test:domain": "jest --watch --runInBand --silent",
+    "test:domain:verbose": "jest --watch --runInBand",
+    "test:ci": "jest --runInBand --silent --verbose",
+    "build": "vsce package",
     "publish": "vsce publish"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/jest": "^29.1.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "16.x",
     "@types/vscode": "^1.60.0",
@@ -46,9 +88,16 @@
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "glob": "^7.1.7",
+    "jest": "^29.1.2",
     "mocha": "^9.0.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.3.2",
     "vsce": "^1.93.0",
     "vscode-test": "^1.5.2"
+  },
+  "dependencies": {
+    "firebase": "^9.13.0",
+    "nanoid": "^3.3.4",
+    "rxjs": "^7.5.7"
   }
 }
